feat: add 2FA (TOTP/push/email OTP), email verification, Add Expense drawer, translation sync
- Auth: email verification on signup, auto-resend on login for unverified users
- 2FA: TOTP setup with QR code, push with 30s countdown + TOTP fallback, email OTP
- OAuth2: Google login support with success handler
- Password reset flow
- HomePage: Add Expense in right-side drawer (same as Log Weight/Workout)
- FilterDropdown: fixed to position:fixed to escape overflow clipping in drawers
- AddTransactionModal: extracted shared modal, used in Dashboard and TransactionsPage
- Translation sync script: auto-translates missing Tamil keys via MyMemory API
- Nav: renamed Budgets to Budget & Spend
- ESLint: removed unused imports in TransactionsPage, BudgetsPage, WeeklyPlanPage, AuthenticationPage

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>